--- a/index.html
+++ b/index.html
@@ -5,19 +5,24 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="styles.css" />
+    <link rel="icon" href="assets/logo-ico.png">
     <title>Mind behavior</title>
   </head>
   <body>
     <header>
       <div class="logo">
-        <img class="logo-image" src="assets/logo.png" alt="Logo" />
+        <a href="">
+          <img class="logo-image" src="assets/logo.png" alt="Logo" />
+        </a>
       </div>
       <div class="menu">
         <ul class="navigation">
-          <li class="nav-item">Обо мне</li>
-          <li class="nav-item">Когда необходима помощь психолога</li>
-          <li class="nav-item">Контакты</li>
-          <li class="nav-item">Статьи</li>
+          <li class="nav-item"><a href="./about.html">Обо мне</a></li>
+          <li class="nav-item">
+            <a href="./help.html">Когда необходима помощь психолога</a>
+          </li>
+          <li class="nav-item"><a href="./contacts.html">Контакты</a></li>
+          <li class="nav-item"><a href="./articles.html">Статьи</a></li>
         </ul>
       </div>
     </header>
@@ -119,9 +124,9 @@
         <h5 class="copyright">© Copyright 2022</h5>
       </div>
       <div class="social-buttons">
-        <a href="#"><img src="assets/facebook.svg" alt="Facebook" /></a>
-        <a href="#"><img src="assets/twitter.svg" alt="Twitter" /></a>
-        <a href="#"><img src="assets/linkedin.svg" alt="Linkedin" /></a>
+        <a href="#"><img src="./assets/facebook.svg" alt="Facebook" /></a>
+        <a href="#"><img src="./assets/twitter.svg" alt="Twitter" /></a>
+        <a href="#"><img src="./assets/linkedin.svg" alt="Linkedin" /></a>
       </div>
     </footer>
   </body>
