--- a/articles.html
+++ b/articles.html
@@ -36,8 +36,8 @@
       <h2 class="page-title">Статьи</h2>
       <section class="articles">
         <div class="article">
-          <div class="service-icon">
-            <img src="assets/social.png" alt="Mail" />
+          <div class="article-icon">
+            <img src="assets/stress.png" alt="Mail" />
           </div>
           <div сlass="service-content">
             <h4 class="service-name">Постоянный стресс</h4>
@@ -50,8 +50,8 @@
           </div>
         </div>
         <div class="article">
-          <div class="service-icon">
-            <img src="assets/social.png" alt="Mail" />
+          <div class="article-icon">
+            <img src="assets/low.png" alt="Mail" />
           </div>
           <div сlass="service-content">
             <h4 class="service-name">Низкая самооценка</h4>
@@ -64,8 +64,8 @@
           </div>
         </div>
         <div class="article">
-          <div class="service-icon">
-            <img src="assets/social.png" alt="Mail" />
+          <div class="article-icon">
+            <img src="assets/complex.png" alt="Mail" />
           </div>
           <div сlass="service-content">
             <h4 class="service-name">Психологические комплексы</h4>
@@ -78,8 +78,8 @@
           </div>
         </div>
         <div class="article">
-          <div class="service-icon">
-            <img src="assets/social.png" alt="Mail" />
+          <div class="article-icon">
+            <img src="assets/emotion.png" alt="Mail" />
           </div>
           <div сlass="service-content">
             <h4 class="service-name">Эмоциональная неустойчивость</h4>
@@ -92,8 +92,8 @@
           </div>
         </div>
         <div class="article">
-          <div class="service-icon">
-            <img src="assets/social.png" alt="Mail" />
+          <div class="article-icon">
+            <img src="assets/hight.png" alt="Mail" />
           </div>
           <div сlass="service-content">
             <h4 class="service-name">Повышенная тревожность</h4>
