--- a/about.html
+++ b/about.html
@@ -37,9 +37,9 @@
       <section class="about">
         <div>
           <h3>Пучковский Владислав Юрьевич – психолог, семейный психолог.</h3>
-          <h4>Специализации:</h4> психологическое консультирование; семейное
+          <h4>Специализации:</h4> Психологическое консультирование; семейное
           консультирование; психологическая коррекция. </br>
-          <h4>Прием пациентов:</h4> старше
+          <h4>Прием пациентов:</h4>Старше
           18-ти лет.Проблемы и жалобы, с которыми можно обратиться за помощью:
           длительный стресс; сниженная самооценка; трудности в принятии решения;
           повышенная тревожность; эмоциональная неустойчивость; нежелательные
@@ -50,18 +50,18 @@
           выстраивания и защиты личных границ; сложности с выстраиванием
           отношений; одиночество и поиск партнера. </br>
           <h4>Проблемы, с которыми чаще
-          всего обращаются пациенты:</h4> кризисные состояния личности; переживание
+          всего обращаются пациенты:</h4> Кризисные состояния личности; переживание
           травматического опыта; трудности самоопределения, поиска смысла жизни;
           сложности с построением отношений (детско-родительских, супружеских,
           партнерских). </br>
-          <h4>Виды деятельности:</h4> индивидуальные консультации
+          <h4>Виды деятельности:</h4> Индивидуальные консультации
           психолога; семейные консультации психолога. Методы работы: психодрама;
           монодрама; символдрама; арт-терапия; сказкотерапия; метафорические
           ассоциативные карты. </br>
           <h4>Образование:</h4>2006 - 2011 гг. – УО "Белорусский
           государственный педагогический университет им. Максима Танка",
           психолог, преподаватель психологии. </br>
-          <h4>Опыт работы:</h4> с 2014 года, включая:
+          <h4>Опыт работы:</h4>С 2014 года, включая:
           2014 - 2016 гг. – ООО "Институт интегративной психодрамы". Ассистент
           основателя института и ко-тренер психодраматической терапевтической
           группы "Путь к себе".2016 год – по настоящее время – Частная
@@ -81,7 +81,7 @@
           руководителей "Закон силы".Семинар "Дизайн: работа с Силами
           Пространства".2019 год – ГУО "Академия последипломного образования".
         </br>
-        <h4>Онкопсихология:</h4> психологическаяпомощь онкологическим больным и их
+        <h4>Онкопсихология:</h4> Психологическая помощь онкологическим больным и их
           родственникам. Свидетельство о повышении квалификации.2020 год –
           Московский институт гештальта и психодрамы. Основы психодрама-терапии.
           Удостоверение о повышении квалификации.2020 год – по настоящее время
