--- a/help.html
+++ b/help.html
@@ -45,16 +45,16 @@
           жить «как-то, как раньше», он хочет жить хорошо и сейчас. Оправданное
           желание, реализовать которое может помочь психотерапия.
         </h3>
-        <button class="order">Записаться на консультацию</button>
+        <button class="order" onclick="alert(`Вы успешно записаны!`)">Записаться на консультацию</button>
       </section>
-      <section class="help">
+      <section class="consultation-acro">
         <h3>
           Краткая справка, чтобы не перепутать, кто считается психотерапевтом, а
           кто — нет.
         </h3>
+        <div class="animation">
         <div class="details">
-          <div>
-            <p class="mentions">
+            <div class="mentions">
               <b>Психолог</b> — это человек с высшим специализированным
               образованием, в дипломе написано «психолог». После специальной
               подготовки — «клинический психолог». Все остальные наименования
@@ -62,31 +62,26 @@
               какими методами он пользуется. Психолог помогает найти выход из
               сложных ситуаций, проработать проблемы. Но он не лечит ментальные
               расстройства и заболевания, он консультирует здоровых людей.
-            </p>
-            <img
-              class="mentions"
-              class="logo-image"
-              src="./assets/work.png"
-              alt="Work"
-            />
-          </div>
-          <div>
-            <p class="mentions">
+            </div></br>
+            <div class="mentions">
               <b>Психиатр</b> — это человек с высшим медицинским образованием,
               специалист в области психиатрии. Он лечит людей с сильными
               расстройствами психики, как правило, в стационаре, в основном
               таблетками и процедурами. Психотерапевт — это психиатр, который
               прошёл дополнительную подготовку. Он может назначать препараты,
               консультировать и лечить разными методами психотерапии.
-            </p>
-            <p class="mentions">
-              <b>Психотерапевт</b> нужен и для реабилитации больных с серьёзными
+            </div></br></br></br>
+            <div class="mentions">
+              <b>Психотерапевт</b> - нужен и для реабилитации больных с серьёзными
               заболеваниями, и для лечения расстройств, которые так или иначе
               мешают жить, работать, строить отношения и заниматься творчеством.
               В общем, психотерапия улучшает качество жизни.
-            </p>
-          </div>
+            </div></br>
         </div>
+      </div>
+      </section>
+      <section class="help">
+        
         <div class="symptoms">
           <h3>Когда пора записываться на приём.</h3>
           Психические расстройства редко проявляются ни с того ни с сего, как
