--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
           не хватает силы воли, или что вы живёте не своей жизнью? С этим
           однозначно стоит разобраться!
         </h2>
-        <button class="order">Записаться на консультацию</button>
+        <button class="order" onclick="alert(`Вы успешно записаны!`)">Записаться на консультацию</button>
       </section>
       <section class="services">
         <h2 class="services-title">Наши сервисы</h2>
