--- a/about.html
+++ b/about.html
@@ -35,7 +35,10 @@
     <main>
       <h2 class="page-title">Обо мне</h2>
       <section class="about">
-        <div>
+        <div class="photo">
+          <img src="./assets/author.jpg" alt="Author" />
+        </div>
+        <div style="width: 700px;">
           <h3>Пучковский Владислав Юрьевич – психолог, семейный психолог.</h3>
           <h4>Специализации:</h4> Психологическое консультирование; семейное
           консультирование; психологическая коррекция. </br>
@@ -58,7 +61,7 @@
           психолога; семейные консультации психолога. Методы работы: психодрама;
           монодрама; символдрама; арт-терапия; сказкотерапия; метафорические
           ассоциативные карты. </br>
-          <h4>Образование:</h4>2006 - 2011 гг. – УО "Белорусский
+        </div><div><h4>Образование:</h4>2006 - 2011 гг. – УО "Белорусский
           государственный педагогический университет им. Максима Танка",
           психолог, преподаватель психологии. </br>
           <h4>Опыт работы:</h4>С 2014 года, включая:
