--- a/articles.html
+++ b/articles.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="styles.css" />
-    <link rel="icon" href="assets/logo-ico.png">
+    <link rel="icon" href="assets/logo-ico.png" />
     <title>Mind behavior</title>
   </head>
   <body>
@@ -33,7 +33,7 @@
       </div>
     </header>
     <main>
-      <h2 class="page-title">Статьи</h2>
+      <h2 class="page-title">Статьи, которые стоит прочесть каждому</h2>
       <section class="articles">
         <div class="article">
           <div class="article-icon">
@@ -42,8 +42,12 @@
           <div сlass="service-content">
             <h4 class="service-name">Постоянный стресс</h4>
             <p class="service-description">
-              Стресс стал частью жизни современного человека и подстерегает его в самых разных ситуациях. Как ни странно, это не всегда плохо. Состояние стресса ...
-              <a target=”_blank” href="https://aif.ru/boostbook/sostojanie-stressa.html"
+              Стресс стал частью жизни современного человека и подстерегает его
+              в самых разных ситуациях. Как ни странно, это не всегда плохо.
+              Состояние стресса ...
+              <a
+                target="”_blank”"
+                href="https://aif.ru/boostbook/sostojanie-stressa.html"
                 >Читать подробнее</a
               >
             </p>
@@ -56,8 +60,12 @@
           <div сlass="service-content">
             <h4 class="service-name">Низкая самооценка</h4>
             <p class="service-description">
-              Низкая самооценка — как слабый иммунитет: она делает нас незащищенными от ежедневных мелких неудач. Достаточно одного косого взгляда, глупой шутки друга или ...
-              <a target=”_blank” href="https://www.psychologies.ru/articles/nizkaya-samootsenka-kak-povyisit-immunitet/"
+              Низкая самооценка — как слабый иммунитет: она делает нас
+              незащищенными от ежедневных мелких неудач. Достаточно одного
+              косого взгляда, глупой шутки друга или ...
+              <a
+                target="”_blank”"
+                href="https://www.psychologies.ru/articles/nizkaya-samootsenka-kak-povyisit-immunitet/"
                 >Читать подробнее</a
               >
             </p>
@@ -70,8 +78,13 @@
           <div сlass="service-content">
             <h4 class="service-name">Психологические комплексы</h4>
             <p class="service-description">
-              Психологические комплексы — страшный враг, который искажает восприятие себя и окружающей действительности. Глядя на мир через призму своих комплексов, зачастую очень непросто адекватно оценивать ...
-              <a target=”_blank” href="https://brodude.ru/10-psixologicheskix-kompleksov-kotorye-sdelayut-tvoyu-zhizn-nevynosimoj/"
+              Психологические комплексы — страшный враг, который искажает
+              восприятие себя и окружающей действительности. Глядя на мир через
+              призму своих комплексов, зачастую очень непросто адекватно
+              оценивать ...
+              <a
+                target="”_blank”"
+                href="https://brodude.ru/10-psixologicheskix-kompleksov-kotorye-sdelayut-tvoyu-zhizn-nevynosimoj/"
                 >Читать подробнее</a
               >
             </p>
@@ -84,8 +97,13 @@
           <div сlass="service-content">
             <h4 class="service-name">Эмоциональная неустойчивость</h4>
             <p class="service-description">
-              Эмоционально неустойчивое (лабильное) расстройство личности — это повышенная возбудимость, импульсивность, низкая способность к самоконтролю и эмоциональная неуравновешенность. Как и другие личностные расстройства, это скорее  ...
-              <a target=”_blank” href="https://cmzmedical.ru/zabolevaniya/emotsionalno-neustoychivoe-rasstroystvo-lichnosti/"
+              Эмоционально неустойчивое (лабильное) расстройство личности — это
+              повышенная возбудимость, импульсивность, низкая способность к
+              самоконтролю и эмоциональная неуравновешенность. Как и другие
+              личностные расстройства, это скорее ...
+              <a
+                target="”_blank”"
+                href="https://cmzmedical.ru/zabolevaniya/emotsionalno-neustoychivoe-rasstroystvo-lichnosti/"
                 >Читать подробнее</a
               >
             </p>
@@ -98,12 +116,39 @@
           <div сlass="service-content">
             <h4 class="service-name">Повышенная тревожность</h4>
             <p class="service-description">
-              Повышенная тревожность заметно ухудшает качество жизни и может стать пусковым механизмом для развития психоневрологических заболеваний. Причины тревожности в основном заключаются в сильных эмоциональных ...
-              <a target=”_blank” href="https://centrsna.by/articles/zabolevaniya/povyshennaya-trevozhnost/"
+              Повышенная тревожность заметно ухудшает качество жизни и может
+              стать пусковым механизмом для развития психоневрологических
+              заболеваний. Причины тревожности в основном заключаются в сильных
+              эмоциональных ...
+              <a
+                target="”_blank”"
+                href="https://centrsna.by/articles/zabolevaniya/povyshennaya-trevozhnost/"
                 >Читать подробнее</a
               >
             </p>
           </div>
+        </div>
+        <div class="video-frame">
+          <iframe
+            class="video"
+            width="560"
+            height="315"
+            src="https://www.youtube.com/embed/lGh7PO855bg"
+            title="YouTube video player"
+            frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+            allowfullscreen
+          ></iframe>
+          <iframe
+          class="video"
+            width="560"
+            height="315"
+            src="https://www.youtube.com/embed/Kg6df_QuhRM"
+            title="YouTube video player"
+            frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+            allowfullscreen
+          ></iframe>
         </div>
       </section>
     </main>
