--- a/contacts.html
+++ b/contacts.html
@@ -36,9 +36,9 @@
       <h2 class="page-title">Контакты</h2>
       <section class="contacts">
         <div class="info">
-          <div class="photo">
+          <div>
             <h3>Владислав Пучковский</h3>
-            <img src="./assets/author.jpg" alt="Author" />
+            <img src="./assets/work.png" alt="Author" style="width: 650px;"/>
           </div>
           <div class="social">
             <h3>Официальные страницы в социальных сетях:</h3>
