--- a/help.html
+++ b/help.html
@@ -120,15 +120,7 @@
           15. Появляются мысли о суициде.
         </div>
         <div>
-          <iframe
-            src="https://docs.google.com/forms/d/e/1FAIpQLSeStr3MWMNQ8EQF5eaCviJISUgyNVdRjy0KRzT5XC9PQcnoGA/viewform?embedded=true"
-            width="640"
-            height="1947"
-            frameborder="0"
-            marginheight="0"
-            marginwidth="0"
-            >Загрузка…</iframe
-          >
+          <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSeBi-VdTtAaMxjqr3C1Fp2ZULLedgxQMDmOVgNPAaRZicO4nA/viewform?embedded=true" width="640" height="2590" frameborder="0" marginheight="0" marginwidth="0">Загрузка…</iframe>
         </div>
       </section>
     </main>
