--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="styles.css" />
-    <link rel="icon" href="assets/logo-ico.png">
+    <link rel="icon" href="assets/logo-ico.png" />
     <title>Mind behavior</title>
   </head>
   <body>
@@ -33,88 +33,144 @@
           не хватает силы воли, или что вы живёте не своей жизнью? С этим
           однозначно стоит разобраться!
         </h2>
-        <button class="order" onclick="alert(`Вы успешно записаны!`)">Записаться на консультацию</button>
+        <button class="order" onclick="alert(`Вы успешно записаны!`)">
+          Записаться на консультацию
+        </button>
       </section>
       <section class="services">
-        <h2 class="services-title">Наши сервисы</h2>
-        <p class="services-description">
-          Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum.
-          Duis mollis, non commodo luctus, nisi erat porttitor ligula, eget
-          lacinia odio sem nec elit. Fusce dapibus, tellus ac cursus commodo,
-          tortor mauris condimentum nibh.
-        </p>
+        <h2 class="services-title">Услуги</h2>
         <div class="service-list">
           <div class="service">
-            <div class="service-icon">
-              <img src="assets/social.png" alt="Pencil" />
-            </div>
-            <div сlass="service-content">
-              <h4 class="service-name">Собственные разработки</h4>
-              <p class="service-description">
-                Curabitur vestibulum eget mauris quis laoreet. Phasellus in quam
-                laoreet, viverra lacus ut, ultrices velit.
-              </p>
-            </div>
+            <a href="#family">
+              <div class="service-icon">
+                <img src="assets/social.png" alt="Pencil" />
+              </div>
+              <div сlass="service-content">
+                <h4 class="service-name">Семейный психолог</h4>
+                <p class="service-description">
+                  Обращайтесь за помощью психолога в Минске и не стоит постоянно
+                  нервничать из-за конфликтов с партнером или детьми.
+                </p>
+              </div></a
+            >
           </div>
           <div class="service">
-            <div class="service-icon">
-              <img src="assets/social.png" alt="Lamp" />
-            </div>
-            <div сlass="service-content">
-              <h4 class="service-name">Инновационные идеи</h4>
-              <p class="service-description">
-                Quisque luctus, quam eget molestie commodo, lacus purus cursus
-                purus, nec rutrum tellus dolor id lorem.
-              </p>
-            </div>
+            <a href="#therapy">
+              <div class="service-icon">
+                <img src="assets/social.png" alt="Lamp" />
+              </div>
+              <div сlass="service-content">
+                <h4 class="service-name">Гештальт-терапия</h4>
+                <p class="service-description">
+                  Хотите управлять своей жизнью? Разберем проблемы от
+                  личностного кризиса до психологической травмы и панических
+                  атак.
+                </p>
+              </div></a
+            >
           </div>
           <div class="service">
-            <div class="service-icon">
-              <img src="assets/social.png" alt="Heart" />
-            </div>
-            <div сlass="service-content">
-              <h4 class="service-name">В тебе есть ответ</h4>
-              <p class="service-description">
-                Nulla sed nunc et tortor luctus faucibus. Morbi at aliquet
-                turpis, et consequat felis. Quisque condimentum.
-              </p>
-            </div>
+            <a href="#individual">
+              <div class="service-icon">
+                <img src="assets/social.png" alt="Heart" />
+              </div>
+              <div сlass="service-content">
+                <h4 class="service-name">
+                  Индивидуальная психотерапия и консультация
+                </h4>
+                <p class="service-description">
+                  Хотите в жизни что-то менять? Вам необходима индивидуальная
+                  психотерапия. Начните анализировать свои переживания.
+                </p>
+              </div>
+            </a>
           </div>
-          <div class="service">
-            <div class="service-icon">
-              <img src="assets/social.png" alt="Phone" />
-            </div>
-            <div сlass="service-content">
-              <h4 class="service-name">Гибкость разума</h4>
-              <p class="service-description">
-                Sed porttitor placerat rhoncus. In at nunc tellus. Maecenas
-                blandit nunc ligula. Praesent elit leo.
-              </p>
-            </div>
+        </div>
+        <div id="family" class="detailed-info">
+          <img
+            src="assets/3.png"
+            alt="Heart"
+            style="width: 250px; margin-right: 20px"
+          />
+          <div>
+            <h3>Решение семейных проблем с семейным психологом</h3>
+            <p>
+              Что сложнее? Вовремя обратиться к семейному психологу или
+              постоянно нервничать из-за конфликтов в паре с партером, потери
+              коммуникации с детьми? Я предлагаю семейную психологическую
+              консультацию! За цену консультации вы проработаете негативные
+              переживания, возьмете ответственность за свою жизнь, научитесь
+              проговаривать правила в семье и решать проблемы с партнером без
+              замалчивания. Да, путь работы над собой и отношениями в семье
+              непростой, но мы его пройдем вместе!
+            </p>
           </div>
-          <div class="service">
-            <div class="service-icon">
-              <img src="assets/social.png" alt="Mail" />
-            </div>
-            <div сlass="service-content">
-              <h4 class="service-name">24 / 7 Поддержка</h4>
-              <p class="service-description">
-                Vivamus vel quam lacinia, tincidunt dui non, vehicula nisi.
-                Nulla a sem erat. Pellentesque egestas venenatis lorem .
-              </p>
-            </div>
+        </div>
+        <div id="therapy" class="detailed-info">
+          <img
+            src="assets/2.png"
+            alt="Heart"
+            style="width: 250px; height: 200px; margin-right: 20px"
+          />
+          <div>
+            <h3>Гештальт-терапия как методика</h3>
+            <p>
+              У нас есть границы личности, потребности, сложившихся паттерны или
+              гештальты – без осознания они работают автоматически и определяют
+              наше поведение. На сеансах со мной мы восстанавливаем границы –
+              завершаем гештальты.
+            </p>
+            <ul>
+              <li>исследовать свою жизнь и понять, как она организована;</li>
+              <li>найти паттерны поведения и их истоки;</li>
+              <li>
+                отыскать новые способы организовывать жизнь, решать проблемы.
+              </li>
+            </ul>
+            <p>
+              Основные методы такой терапии – разговор, телесные практики,
+              моделирование ситуаций. Если вас привлекает такая специфика и
+              подходит под ваш запрос – записывайтесь на первую консультацию. Мы
+              проведем пробную встречу, и вы поймете, подхожу ли я вам как
+              психолог. Цена 1 консультации –50$ по курсу (примерно 125
+              рублей).Длительность – 1 час.Формат – мы встретимся в моем
+              кабинете в Минске или созвонимся в Skype. Для участников обучающих
+              программ в гештальт подходе, часы личной терапии идут в зачёт.
+              Хотите задать вопросы по формату работы? Заполняйте заявку на
+              обратный звонок, пишите мне в социальных сетях или
+              онлайн-консультанту на сайте. Я отвечу на вопросы, и мы
+              договоримся на встречу.
+            </p>
           </div>
-          <div class="service">
-            <div class="service-icon">
-              <img src="assets/social.png" alt="Star" />
-            </div>
-            <div сlass="service-content">
-              <h4 class="service-name">Почувствуй себя звездой</h4>
-              <p class="service-description">
-                Quisque hendrerit purus dapibus, ornare nibh vitae, viverra
-                nibh. Fusce vitae aliquam tellus.
-              </p>
-            </div>
+        </div>
+        <div id="individual" class="detailed-info">
+          <img
+            src="assets/1.png"
+            alt="Heart"
+            style="width: 250px; height: 150px; margin-right: 20px"
+          />
+          <div>
+            <h3>Обращайтесь, если вы:</h3>
+            <ul>
+              <li>пребываете в состоянии стресса и тревоги;</li>
+              <li>
+                страдаете от панических атак, депрессии, страхов и фобий; устали
+                от ссор и семейных конфликтов;
+              </li>
+              <li>потеряли взаимопонимание со своими детьми;</li>
+              <li>не можете реализоваться в профессиональной сфере;</li>
+              <li>не справляетесь с эмоциями;</li>
+              <li>не можете наладить личную жизнь;</li>
+              <li>
+                хотите восстановить баланс в семье. Чтобы записаться на
+                индивидуальную психотерапию, звоните или заказывайте обратный
+                звонок – определимся с форматом, датой, временем.
+              </li>
+            </ul>
+            <p>
+              Я принимаю клиентов в собственном кабинете для личной
+              психотерапии, поэтому мы быстро сможем договориться о встрече.
+            </p>
           </div>
         </div>
       </section>
