--- a/about.html
+++ b/about.html
@@ -36,7 +36,7 @@
       <h2 class="page-title">Обо мне</h2>
       <section class="about">
         <div class="photo">
-          <img src="./assets/author.jpg" alt="Author" />
+          <img src="./assets/author2.jpg" alt="Author" />
         </div>
         <div style="width: 700px;">
           <h3>Пучковский Владислав Юрьевич – психолог, семейный психолог.</h3>
